target_sources(solver PRIVATE
    ${CMAKE_SOURCE_DIR}/include/nano/solver/augmented.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lsearch.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lstep.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/penalty.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/state.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/status.h
    asga.cpp
    asga.h
    augmented.cpp
    cgd.cpp
    cgd.h
    cocob.cpp
    cocob.h
    ellipsoid.cpp
    ellipsoid.h
    fpba.cpp
    fpba.h
    gd.cpp
    gd.h
    gsample.cpp
    gsample.h
    lbfgs.cpp
    lbfgs.h
    lsearch.cpp
    lstep.cpp
    osga.cpp
    osga.h
    pdsgm.cpp
    pdsgm.h
    penalty.cpp
    quasi.cpp
    quasi.h
    rqb.cpp
    rqb.h
    sgm.cpp
    sgm.h
    state.cpp
    universal.cpp
    universal.h)

add_subdirectory(bundle)
add_subdirectory(gsample)
