target_sources(solver PRIVATE
    ${CMAKE_SOURCE_DIR}/include/nano/solver/bundle.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/csearch.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lsearch.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lstep.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/nesterov.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/proximity.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/state.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/status.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/track.h
    asga.h
    augmented.h
    cgd.h
    cocob.h
    ellipsoid.h
    fpba.h
    gd.h
    gsample.h
    interior.h
    lbfgs.h
    osga.h
    pdsgm.h
    penalty.h
    quasi.h
    rqb.h
    sgm.h
    universal.h
    asga.cpp
    augmented.cpp
    bundle.cpp
    cgd.cpp
    cocob.cpp
    csearch.cpp
    ellipsoid.cpp
    fpba.cpp
    gd.cpp
    gsample.cpp
    interior.cpp
    lbfgs.cpp
    lsearch.cpp
    lstep.cpp
    nesterov.cpp
    osga.cpp
    pdsgm.cpp
    penalty.cpp
    proximity.cpp
    quasi.cpp
    rqb.cpp
    sgm.cpp
    state.cpp
    track.cpp
    universal.cpp)

add_subdirectory(gsample)
add_subdirectory(interior)
