target_sources(solver PRIVATE
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lsearch.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/lstep.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/state.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/status.h
    ${CMAKE_SOURCE_DIR}/include/nano/solver/track.h
    asga.cpp
    asga.h
    augmented.cpp
    augmented.h
    cgd.cpp
    cgd.h
    cocob.cpp
    cocob.h
    dsbm.cpp
    dsbm.h
    ellipsoid.cpp
    ellipsoid.h
    fpba.cpp
    fpba.h
    gd.cpp
    gd.h
    gsample.cpp
    gsample.h
    interior.cpp
    interior.h
    lbfgs.cpp
    lbfgs.h
    lsearch.cpp
    lstep.cpp
    newton.cpp
    newton.h
    osga.cpp
    osga.h
    pdsgm.cpp
    pdsgm.h
    penalty.cpp
    penalty.h
    quasi.cpp
    quasi.h
    rqb.cpp
    rqb.h
    sgm.cpp
    sgm.h
    state.cpp
    track.cpp
    universal.cpp
    universal.h)

add_subdirectory(bundle)
add_subdirectory(gsample)
add_subdirectory(interior)
